[package]
name = "cjson-binding"
version = "0.6.0"
authors = ["Antonio Salsi <passy.linux@zresa.it>"]
edition = "2024"
license = "GPL-3.0"
license-file = "LICENSE"
readme = "README.md"
repository = "https://github.com/HiHappyGarden/cjson-binding"
documentation = "https://docs.rs/cjson-binding"
homepage = "https://github.com/HiHappyGarden/cjson-binding"
description = "Safe Rust bindings for the cJSON library - a lightweight JSON parser in C with support for JSON Pointer (RFC6901), JSON Patch (RFC6902), and JSON Merge Patch (RFC7386)"
keywords = ["json", "cjson", "no_std", "embedded", "parser"]
categories = ["no-std", "parsing", "embedded", "api-bindings"]
autobenches = false
autotests = false

# Metadata for docs.rs
[package.metadata.docs.rs]
features = ["std"]
default-target = "x86_64-unknown-linux-gnu"
targets = ["x86_64-unknown-linux-gnu", "aarch64-unknown-linux-gnu", "armv7-unknown-linux-gnueabihf", "thumbv8m.main-none-eabi"]

[lib]
name = "cjson_bindings"
crate-type = ["staticlib", "rlib"]

[features]
default = []
std = []
disable_panic = []
osal_rs = ["dep:osal-rs", "disable_panic"]

[dependencies]
osal-rs = { version = "0.3", path = "../osal-rs/osal-rs", features = ["freertos"], optional = true }

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"